Removing references to AquaMine

--- a/minename-bio-sources/orthodb-clusters/src/main/resources/orthodb-clusters_config.properties
+++ b/minename-bio-sources/orthodb-clusters/src/main/resources/orthodb-clusters_config.properties
@@ -24,30 +24,5 @@
 # yeast -Symbol
 4932.geneid=primaryIdentifier
 
-# AquaMine species:
-6565.geneid=primaryIdentifier
-6596.geneid=primaryIdentifier
-6687.geneid=primaryIdentifier
-6689.geneid=primaryIdentifier
-6706.geneid=primaryIdentifier
-7950.geneid=primaryIdentifier
-7994.geneid=primaryIdentifier
-7998.geneid=primaryIdentifier
-8010.geneid=primaryIdentifier
-8019.geneid=primaryIdentifier
-8022.geneid=primaryIdentifier
-8023.geneid=primaryIdentifier
-8030.geneid=primaryIdentifier
-8049.geneid=primaryIdentifier
-8128.geneid=primaryIdentifier
-8167.geneid=primaryIdentifier
-8245.geneid=primaryIdentifier
-8267.geneid=primaryIdentifier
-27706.geneid=primaryIdentifier
-29159.geneid=primaryIdentifier
-34816.geneid=primaryIdentifier
-41447.geneid=primaryIdentifier
-74940.geneid=primaryIdentifier
-481459.geneid=primaryIdentifier
-1841481.geneid=primaryIdentifier
-2691554.geneid=primaryIdentifier
+
+# Add mine species here:
