Adding support for default gene-designation property in UniProt config file

--- a/minename-bio-sources/uniprot-evidence/src/main/resources/uniprot-to-ensembl_config.properties
+++ b/minename-bio-sources/uniprot-evidence/src/main/resources/uniprot-to-ensembl_config.properties
@@ -43,4 +43,8 @@ default.uniqueField = primaryIdentifier
 default.primaryIdentifier.gene-designation = Ensembl
 default.gene-designation = gene ID
 
+# FlyBase (special case)
+7227.uniqueField = primaryIdentifier
+7227.primaryIdentifier.dbref = FlyBase
+
 # Use defaults for all Ensembl organisms (make sure project.xml taxon ID list is correct)
