Added FAANG metadata sources and related ontologies

--- a/minename-bio-sources/faang-analysis/src/main/resources/faang-analysis_keys.properties
+++ b/minename-bio-sources/faang-analysis/src/main/resources/faang-analysis_keys.properties
@@ -5,5 +5,5 @@ Organism.key_taxonid = taxonId
 Ontology.key_name = name
 Publication.key_pubmedid = pubMedId
 BioSample.key_biosampleid = bioSampleId
-BioProject.key_bioprojectid_org = bioProjectUniqueId, organism
+BioProject.key_bioprojectuniqueid = bioProjectUniqueId
 Analysis.key_source_org = source, organism
