--- a/minename-bio-sources/faang-experiment/src/main/resources/faang-experiment_keys.properties
+++ b/minename-bio-sources/faang-experiment/src/main/resources/faang-experiment_keys.properties
@@ -4,5 +4,7 @@ SOTerm.key_name_ontology = name, ontology
 Organism.key_taxonid = taxonId
 Ontology.key_name = name
 OntologyTerm.key_identifier=identifier
-OntologyTerm.key_name_ontology=name, ontology
 Publication.key_pubmedid = pubMedId
+BioProject.key_bioprojectuniqueid = bioProjectUniqueId
+BioSample.key_biosampleid = bioSampleId
+Experiment.key_experimentid = experimentId
