--- a/minename-bio-sources/faang-bioproject/src/main/resources/faang-bioproject_keys.properties
+++ b/minename-bio-sources/faang-bioproject/src/main/resources/faang-bioproject_keys.properties
@@ -3,5 +3,7 @@ DataSource.key_name = name
 SOTerm.key_name_ontology = name, ontology
 Organism.key_taxonid = taxonId
 Ontology.key_name = name
+OntologyTerm.key_identifier=identifier
 Publication.key_pubmedid = pubMedId
-BioProject.key_bioprojectid_org = bioProjectUniqueId, organism
+BioProject.key_bioprojectuniqueid = bioProjectUniqueId
+BioSample.key_biosampleid = bioSampleId
