--- a/minename-bio-sources/faang-biosample/faang-biosample.properties
+++ b/minename-bio-sources/faang-biosample/faang-biosample.properties
@@ -1,3 +1,3 @@
 have.file.custom.tgt = true
-converter.class = org.intermine.bio.dataconversion.FaangBiosampleConverter
+converter.class = org.intermine.bio.dataconversion.FAANGBioSampleConverter
 
