--- a/minename-bio-sources/human-developmental-stage-ontology/human-developmental-stage-ontology.properties
+++ b/minename-bio-sources/human-developmental-stage-ontology/human-developmental-stage-ontology.properties
@@ -1,7 +1,7 @@
 have.file.obo = true
 
 # specify the name of the ontology
-obo.ontology.name = Human Developmental Stage Ontology
+obo.ontology.name = Human Developmental Stages Ontology
 
 # set a URL at which more information on the ontology can be found
 obo.ontology.url = https://github.com/obophenotype/developmental-stage-ontologies/wiki/HsapDv
