--- a/minename-bio-sources/faang-analysis/src/main/resources/faang-analysis_keys.properties
+++ b/minename-bio-sources/faang-analysis/src/main/resources/faang-analysis_keys.properties
@@ -4,6 +4,7 @@ SOTerm.key_name_ontology = name, ontology
 Organism.key_taxonid = taxonId
 Ontology.key_name = name
 Publication.key_pubmedid = pubMedId
-BioSample.key_biosampleid = bioSampleId
-BioProject.key_bioprojectuniqueid = bioProjectUniqueId
 Analysis.key_source_org = source, organism
+BioProject.key_bioprojectuniqueid = bioProjectUniqueId
+BioSample.key_biosampleid = bioSampleId
+Experiment.key_experimentid = experimentId
