--- a/minename-bio-sources/faang-bioproject/src/main/resources/faang-bioproject_keys.properties
+++ b/minename-bio-sources/faang-bioproject/src/main/resources/faang-bioproject_keys.properties
@@ -7,3 +7,4 @@ OntologyTerm.key_identifier=identifier
 Publication.key_pubmedid = pubMedId
 BioProject.key_bioprojectuniqueid = bioProjectUniqueId
 BioSample.key_biosampleid = bioSampleId
+Experiment.key_experiemntid = experimentId
