Added licenses to ontology loaders, small change to ontology field names in QTL source

--- a/minename-bio-sources/brenda-tissue-ontology/brenda-tissue-ontology.properties
+++ b/minename-bio-sources/brenda-tissue-ontology/brenda-tissue-ontology.properties
@@ -10,3 +10,5 @@ obo.ontology.url = https://www.brenda-enzymes.org
 # this class in a brenda-tissue-ontology_additions.xml file for this source
 obo.term.class = BTOTerm
 
+obo.ontology.licence = https://creativecommons.org/licenses/by/4.0/
+
