--- a/minename-bio-sources/cell-ontology/cell-ontology.properties
+++ b/minename-bio-sources/cell-ontology/cell-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = https://obophenotype.github.io/cell-ontology
 # this class in a cell-ontology_additions.xml file for this source
 obo.term.class = CLTerm
 
+obo.ontology.licence = https://creativecommons.org/licenses/by/4.0/
