--- a/minename-bio-sources/evidence-ontology/evidence-ontology.properties
+++ b/minename-bio-sources/evidence-ontology/evidence-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = https://bioportal.bioontology.org/ontologies/ECO
 # this class in a evidence-ontology_additions.xml file for this source
 obo.term.class = ECOTerm
 
+obo.ontology.licence = https://creativecommons.org/publicdomain/zero/1.0/
