--- a/minename-bio-sources/human-phenotype-ontology/human-phenotype-ontology.properties
+++ b/minename-bio-sources/human-phenotype-ontology/human-phenotype-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = https://hpo.jax.org/app/
 # this class in a human-phenotype-ontology_additions.xml file for this source
 obo.term.class = HPTerm
 
+obo.ontology.licence = https://hpo.jax.org/app/license
