--- a/minename-bio-sources/mondo-disease-ontology/mondo-disease-ontology.properties
+++ b/minename-bio-sources/mondo-disease-ontology/mondo-disease-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = https://mondo.monarchinitiative.org
 # this class in a mondo-disease-ontology_additions.xml file for this source
 obo.term.class = MONDOTerm
 
+obo.ontology.licence = https://creativecommons.org/licenses/by/4.0/
