--- a/minename-bio-sources/ontology-for-biomedical-investigations/ontology-for-biomedical-investigations.properties
+++ b/minename-bio-sources/ontology-for-biomedical-investigations/ontology-for-biomedical-investigations.properties
@@ -10,3 +10,4 @@ obo.ontology.url = http://obi-ontology.org
 # this class in a ontology-for-biomedical-investigations_additions.xml file for this source
 obo.term.class = OBITerm
 
+obo.ontology.licence = http://creativecommons.org/licenses/by/4.0/
