--- a/minename-bio-sources/uber-anatomy-ontology/uber-anatomy-ontology.properties
+++ b/minename-bio-sources/uber-anatomy-ontology/uber-anatomy-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = http://obophenotype.github.io/uberon
 # this class in a uber-anatomy-ontology_additions.xml file for this source
 obo.term.class = UBERONTerm
 
+obo.ontology.licence = http://creativecommons.org/licenses/by/3.0/
