--- a/minename-bio-sources/experimental-factor-ontology/experimental-factor-ontology.properties
+++ b/minename-bio-sources/experimental-factor-ontology/experimental-factor-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = https://www.ebi.ac.uk/efo/index.html
 # this class in a experimental-factor-ontology_additions.xml file for this source
 obo.term.class = EFOTerm
 
+obo.ontology.licence = https://www.apache.org/licenses/LICENSE-2.0
