--- a/minename-bio-sources/orphanet-rare-disease-ontology/orphanet-rare-disease-ontology.properties
+++ b/minename-bio-sources/orphanet-rare-disease-ontology/orphanet-rare-disease-ontology.properties
@@ -10,3 +10,4 @@ obo.ontology.url = https://www.orphadata.com/ordo
 # this class in a orphanet-rare-disease-ontology_additions.xml file for this source
 obo.term.class = OrphanetTerm
 
+obo.ontology.licence = https://creativecommons.org/licenses/by/4.0/
