--- a/minename-bio-sources/phenotype-and-trait-ontology/phenotype-and-trait-ontology.properties
+++ b/minename-bio-sources/phenotype-and-trait-ontology/phenotype-and-trait-ontology.properties
@@ -10,4 +10,4 @@ obo.ontology.url = https://pato-ontology.github.io/pato
 # this class in a phenotype-and-trait-ontology_additions.xml file for this source
 obo.term.class = PATOTerm
 
-obo.ontology.licence = https://creativecommons.org/licenses/by/3.0/
+obo.ontology.licence = https://github.com/pato-ontology/pato/blob/master/LICENSE
