--- a/minename-bio-sources/faang-gff/src/main/resources/faang-gff_keys.properties
+++ b/minename-bio-sources/faang-gff/src/main/resources/faang-gff_keys.properties
@@ -7,3 +7,4 @@ Publication.key_pubmedid = pubMedId
 Chromosome.key_primaryidentifier_assembly_org = primaryIdentifier, assembly, organism
 Gene.key_primaryidentifier_source_org = primaryIdentifier, source, organism
 Transcript.key_primaryidentifier_source_org = primaryIdentifier, source, organism
+HistoneBindingSite.key_primaryidentifier_source_org = primaryIdentifier, source, organism
