--- a/minename-bio-sources/faang-biosample/src/main/resources/faang-biosample_keys.properties
+++ b/minename-bio-sources/faang-biosample/src/main/resources/faang-biosample_keys.properties
@@ -6,3 +6,4 @@ Ontology.key_name = name
 OntologyTerm.key_identifier=identifier
 Publication.key_pubmedid = pubMedId
 BioSample.key_biosampleid = bioSampleId
+Protocol.key_name_url = name, url
