--- a/minename-bio-sources/hymenoptera-anatomy-ontology/hymenoptera-anatomy-ontology.properties
+++ b/minename-bio-sources/hymenoptera-anatomy-ontology/hymenoptera-anatomy-ontology.properties
@@ -4,7 +4,7 @@ have.file.obo = true
 obo.ontology.name = Hymenoptera Anatomy Ontology
 
 # set a URL at which more information on the ontology can be found
-obo.ontology.url = https://bioportal.bioontology.org/ontologies/HAO
+obo.ontology.url = http://hymao.org
 
 # set the class name for terms that will be created, you may need to define
 # this class in a hao_additions.xml file for this source
