--- a/minename-bio-sources/pangene/pangene.properties
+++ b/minename-bio-sources/pangene/pangene.properties
@@ -1,3 +1,3 @@
 have.file.custom.tgt = true
-converter.class = org.intermine.bio.dataconversion.PanGeneConverter
+converter.class = org.intermine.bio.dataconversion.PangeneConverter
 
