Added refseq-gff as a dependency to qtl-gff

--- a/minename-bio-sources/qtl-gff/build.gradle
+++ b/minename-bio-sources/qtl-gff/build.gradle
@@ -20,3 +20,7 @@ sourceSets {
 processResources {
     from('.') { include ("*.properties")}
 }
+
+dependencies {
+     compile project(':bio-source-refseq-gff')
+}
